# qa_guru_python_8_lessons

./: README.md  config.py  conftest.py  homework.py  pyproject.toml  readme.md  requirements.txt  test_annotation_steps_selene.py  test_clear_selene.py  test_demoshop.py  test_google_should_find_selene.py  test_homework.py  test_lambda_steps_selene.py  test_zip_files_check.py  work.py
homework/: __init__.py  test_fixtures.py  test_parametrize.py  test_shop.py  test_skip.py
pages/: registration_page.py
tests/: conftest.py  test_del_reqres.py  test_demoqa_site.py  test_get_reqres.py  test_post_reqres.py  test_put_reqres.py
tests/allure-results/: 2ca1fb67-34c6-4301-b9aa-9e2062852728-container.json  439efc42-0f71-44d5-9df4-47ccf32fc47d-result.json  b3ba83f3-a98c-4fdd-be4b-042e7107f0a5-container.json
tests/android_app/: test_wikipedia.py
utils/: load_schema.py
